Fixed Orders+Inventory flow